update html pages

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -69,8 +69,14 @@
 </nav>
 </div>
 <div class="container">
+    <div class="myalert"></div>
   {% block content %}
   {% endblock %}
+    <hr/>
+    <footer>
+        <p class="pull-right"><a href="#">Back to top</a></p>
+        <p>&copy; 2017 <a href="http://www.onmath.com">OnMath, Inc.</a> &middot; Privacy &middot; <a href="#">Terms</a></p>
+    </footer>
 </div>
 </body>
 {% block js %}
