--- a/app/templates/snp_index_cover.html
+++ b/app/templates/snp_index_cover.html
@@ -143,7 +143,8 @@
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2017 OnMath, Inc. &middot; <a href="http://www.onmath.com">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>&copy; 2017 <a href="http://www.onmath.com">OnMath, Inc.</a> &middot; Privacy &middot; <a href="#">Terms</a></p>
+      </footer>
 
     </div><!-- /.container -->
 
