add cover page pictures and run shell script

--- a/app/templates/snp_index_cover.html
+++ b/app/templates/snp_index_cover.html
@@ -29,7 +29,7 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
+          <img class="first-slide" src="{{ url_for('static', filename='images/wheat01.jpg')}}" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Gene Variation</h1>
@@ -39,7 +39,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+          <img class="second-slide" src="{{ url_for('static', filename='images/wheat02.jpg')}}" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Tools</h1>
@@ -49,7 +49,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+          <img class="third-slide" src="{{ url_for('static', filename='images/wheat03.jpg')}}" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Gene's expression</h1>
@@ -79,19 +79,19 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-          <h2>Gene variation</h2>
+          <img class="img-circle" src="{{ url_for('static', filename='images/v.jpg')}}" alt="Generic placeholder image" width="140" height="140">
+          <h2>Variation</h2>
           <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
           <p><a class="btn btn-default" href="{{ url_for('main.search_by_regin') }}" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-          <h2>Gene exprssion</h2>
+          <img class="img-circle" src="{{ url_for('static', filename='images/e.png')}}" alt="Generic placeholder image" width="140" height="140">
+          <h2>Expression</h2>
           <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
           <p><a class="btn btn-default" href="{{ url_for('expr.show_by_gene') }}" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+          <img class="img-circle" src="{{ url_for('static', filename='images/t.png')}}" alt="Generic placeholder image" width="140" height="140">
           <h2>Tools</h2>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
           <p><a class="btn btn-default" href="{{ url_for('tools.locus_identifier_search') }}"  role="button">View details &raquo;</a></p>
