--- a/app/templates/snp/get_snp_plot.html
+++ b/app/templates/snp/get_snp_plot.html
@@ -1,10 +1,221 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'base.html' %}
+{% block css %}
+<link href={{ url_for('static', filename='fancybox/jquery.fancybox.css') }} rel="stylesheet">
+<link href={{ url_for('static', filename='fancybox/fancybox.css') }} rel="stylesheet">
+<link href={{ url_for('static', filename='css/main.css') }} rel="stylesheet">
+{% endblock %}
+{% block content %}
+<div class="panel-body">
+<div class="panel">
+  <h2>Get Snp Index Plot:</h2>
+    <div class="panel-heading">
+        <h3 class="panel-title">Select a file. </h3>
+    </div>
+<div class="panel-body">
+  <div class="row">
+    <div class="col-xs-6">
+        <div class="form-group">
+        <div class="input-group input-group-sm">
+            <span class="input-group-addon">File name:</span>
+            <select class="selectpicker" data-width="25%" name="file" id="select_file">
+                        <option value= selected="selected"></option>
+                        {% for file in files %}
+                        <option value={{file}}>{{file}}</option>
+                        {% endfor %}
+            </select>
+        </div>
+        </div>
+    </div>
+  </div>
+<!-- right -->
+<!--
+<div class="col-xs-8">
+<div class="panel">
+    <div class="panel-heading">
+      <div class="row">
+        <div class="col-xs-4">
+          <h3 class="panel-title">select samples displayed in the result (<span class='text-danger'>optional</span>):</h3>
+        </div>
+        <div class="col-xs-8">
+          <div class="input-group search">
+            <input type="text" class="form-control" id="search-sample" placeholder="Search for...">
+            <span class="input-group-btn">
+              <button class="btn btn-search" id="search-button" type="button"><i class="fa fa-search fa-fw"></i> Search</button>
+            </span>
+          </div>
+        </div>
+    </div>
+    <div class="panel-body show-samples">
+    </div>
+</div>
+</div>
+</div>
+-->
+</div>
+<div>
+  <h2>Divide groups:</h2>
+  <div class="panel-heading">
+  <h3 class="panel-title">Divide samples which showed below to two groups.</h3>
+  </div>
+  <div class="row">
+    <div class="col-xs-5">
+        <select name="from[]" id="multi_d" class="form-control" size="26" multiple="multiple">
+        </select>
+    </div>
+
+    <div class="col-xs-2">
+        <button type="button" id="multi_d_rightAll" class="btn btn-default btn-block" style="margin-top: 20px;"><i class="glyphicon glyphicon-forward"></i>&nbsp;ADD ALL</button>
+        <button type="button" id="multi_d_rightSelected" class="btn btn-default btn-block"><i class="glyphicon glyphicon-chevron-right"></i>&nbsp;ADD</button>
+        <button type="button" id="multi_d_leftSelected" class="btn btn-default btn-block"><i class="glyphicon glyphicon-chevron-left"></i>&nbsp;REMOVE</button>
+        <button type="button" id="multi_d_leftAll" class="btn btn-default btn-block"><i class="glyphicon glyphicon-backward"></i>&nbsp;REMOVE ALL</button>
+
+        <hr style="margin: 40px 0 60px;" />
+
+        <button type="button" id="multi_d_rightAll_2" class="btn btn-default btn-block"><i class="glyphicon glyphicon-forward"></i>&nbsp;ADD ALL</button>
+        <button type="button" id="multi_d_rightSelected_2" class="btn btn-default btn-block"><i class="glyphicon glyphicon-chevron-right"></i>&nbsp;ADD</button>
+        <button type="button" id="multi_d_leftSelected_2" class="btn btn-default btn-block"><i class="glyphicon glyphicon-chevron-left"></i>&nbsp;REMOVE</button>
+        <button type="button" id="multi_d_leftAll_2" class="btn btn-default btn-block"><i class="glyphicon glyphicon-backward"></i>&nbsp;REMOVE ALL</button>
+    </div>
+
+    <div class="col-xs-5">
+        <b>group A</b>
+        <select name="to[]" id="multi_d_to" class="form-control" size="8" multiple="multiple"></select>
+
+        <br/><hr/><br/>
+
+        <b>group B</b>
+        <select name="to_2[]" id="multi_d_to_2" class="form-control" size="8" multiple="multiple"></select>
+    </div>
+</div>
+</div>
+  <div class="panel-body">
+    <input class="btn btn-primary btn-sm"  id="submit" type="submit"  value="Submit">
+  </div>
+  <hr/>
+  <!-- add loading hint -->
+  <div id="query_hint"></div>
+  <h2>Plot Results:</h2>
+  <div id="results-plot"></div>
+{% endblock %}
+
+{% block js %}
+<script src="{{ url_for('static' ,filename='fancybox/jquery.fancybox.js') }}"></script>
+<script src="{{ url_for('static' ,filename='fancybox/jquery.fancybox.pack.js') }}"></script>
+<script src="{{ url_for('static' ,filename='js/jquery.albumSlider.min.js') }}"></script>
+<script src="{{ url_for('static' ,filename='fancybox/jquery.mousewheel-3.0.6.pack.js') }}"></script>
+<script src="/static/js/main.js"></script>
+<script>
+function get_input_data(){
+  var table = $("#select_file").find("option:selected").text();
+  var groupA = [];
+  var groupB = [];
+  $("#multi_d_to option").each(function(){
+    groupA.push($(this).text());
+  });
+  $("#multi_d_to_2 option").each(function(){
+    groupB.push($(this).text());
+  });
+  var all_info = {
+      'table': table,
+      'groupA': groupA,
+      'groupB': groupB,
+      'search': 'regin'
+  };
+  return all_info;
+}
+
+function check_input_data(info){
+  var pos_max = 1000000;
+  keys = Object.keys(info);
+  var msg = '';
+  for(var i=0; i<keys.length; i++){
+    if(info[keys[i]].length == 0){
+      msg = keys[i] + ' is empty!';
+      return msg;
+    }
+  }
+  /*
+  if(info['end_pos'] - info['start_pos'] > pos_max){
+    msg = 'range length not allowed > 1000kb!';
+    return msg;
+  }*/
+  return msg;
+}
+$(document).ready(function(){
+  $("#select_file").change(function(){
+    var fileSelect = $(this).find("option:selected").text();
+    ajaxSend('/select_file', {'file': fileSelect}, function(data){
+      var msg = data.msg;
+      if(msg == 'error'){
+        // alert('not find samples!');
+          createAlert('not find samples!');
+        $("#multi_d").empty();
+      }else{
+        $("#multi_d").empty();
+        samples = data.msg;
+        for(var i=0;i<samples.length;i++){
+          var tmp = $('<option value="' + samples[i] + '">' + samples[i] + '</option>');
+          tmp.appendTo('#multi_d');
+        }
+      }
+    });
+  });
+  // multiselect plugin
+  select_plugin()
+  /*
+  $("#search-button").bind('click', function(){
+    var searchSample = $("#search-sample").val();
+    var table = $("#select_file").find("option:selected").text();
+    ajaxSend('/search_sampe', {'table': table, 'sample': searchSample}, function(data){
+      var msg = data.msg;
+      if(msg == 'error'){
+        alert('没有找到相应的样品名称!');
+      }else{
+        sample = data.msg;
+        var tmp = $('<div class="col-xs-2"><div class="checkbox"><label><input type="checkbox" name="dispop" value="' + sample +'">' + sample + '</label></div></div>');
+        tmp.appendTo('.show-samples');
+      }
+    });
+  });
+  */
+  $("#submit").bind('click',function(){
+    var info = get_input_data();
+    var error_msg = check_input_data(info);
+    if(error_msg.length > 0){
+      // alert(error_msg);
+        createAlert(error_msg);
+      return;
+    }
+    info = JSON.stringify(info);
+    $("#query_hint").empty();
+    var hint = $('<span><img src="../static/images/hint.gif" />' + '正在努力生成结果，请稍等...</span>');
+    hint.appendTo('#query_hint');
+    ajaxSend('/generate_snp_plot',{'info': info}, function(data){
+      if(data.msg == 'error'){
+        createAlert(data.msg);
+        $("#query_hint").empty();
+        return;
+      }else{
+          //console.log(data.headData);
+          //console.log(data.bodyData);
+        $('#query_hint').empty();
+        plotStr = createPlot(data.files);
+        $("#results-plot").html(plotStr);
+        $("a.snp-index").fancybox({
+        'overlayShow'	: true,
+        'transitionIn'	: 'elastic',
+        'transitionOut'	: 'elastic'
+        });
+        $("a[rel=example_group]").fancybox({
+        'transitionIn'		: 'none',
+        'transitionOut'		: 'none',
+        'titlePosition' 	: 'over',
+        'titleFormat'		: function(title, currentArray, currentIndex, currentOpts) {
+            return '<span id="fancybox-title-over">Image ' + (currentIndex + 1) + ' / ' + currentArray.length + (title.length ? ' &nbsp; ' + title : '') + '</span>';
+        }});
+        $("div.albumSlider").albumSlider();
+    }}, 'POST');
+    });
+});
+</script>
+{% endblock %}
