--- a/app/templates/snp/get_snp_plot.html
+++ b/app/templates/snp/get_snp_plot.html
@@ -195,24 +195,30 @@ $(document).ready(function(){
       if(msg == 'error'){
         // alert('not find samples!');
           createAlert('you have not generated a divide group!');
+          return;
       }else{
         $("#results-plot").empty();
-        var plotStr = createPlot(data.files, data.name);
-        $("#results-plot").html(plotStr);
-        $("a.snp-index").fancybox({
-        'overlayShow'	: true,
-        'transitionIn'	: 'elastic',
-        'transitionOut'	: 'elastic'
-        });
-        $("a[rel=example_group]").fancybox({
-        'transitionIn'		: 'none',
-        'transitionOut'		: 'none',
-        'titlePosition' 	: 'over',
-        'titleFormat'		: function(title, currentArray, currentIndex, currentOpts) {
-            return '<span id="fancybox-title-over">Image ' + (currentIndex + 1) + ' / ' + currentArray.length + (title.length ? ' &nbsp; ' + title : '') + '</span>';
-        }});
-        $("div.albumSlider").albumSlider();
-
+        if(data.files.length == 0){
+            createAlert('no plot created! please check your info');
+            return;
+        }else {
+            var plotStr = createPlot(data.files, data.name);
+            $("#results-plot").html(plotStr);
+            $("a.snp-index").fancybox({
+                'overlayShow': true,
+                'transitionIn': 'elastic',
+                'transitionOut': 'elastic'
+            });
+            $("a[rel=example_group]").fancybox({
+                'transitionIn': 'none',
+                'transitionOut': 'none',
+                'titlePosition': 'over',
+                'titleFormat': function (title, currentArray, currentIndex, currentOpts) {
+                    return '<span id="fancybox-title-over">Image ' + (currentIndex + 1) + ' / ' + currentArray.length + (title.length ? ' &nbsp; ' + title : '') + '</span>';
+                }
+            });
+            $("div.albumSlider").albumSlider();
+        }
       }
     });
   });
@@ -255,6 +261,11 @@ $(document).ready(function(){
           //console.log(data.headData);
           //console.log(data.bodyData);
         $('#query_hint').empty();
+        if(data.files.length == 0){
+            createAlert('no plot created! please check your info');
+            $('#query_hint').empty();
+            return;
+        }else{
         plotStr = createPlot(data.files, data.name);
         $("#results-plot").html(plotStr);
         $("a.snp-index").fancybox({
@@ -270,7 +281,7 @@ $(document).ready(function(){
             return '<span id="fancybox-title-over">Image ' + (currentIndex + 1) + ' / ' + currentArray.length + (title.length ? ' &nbsp; ' + title : '') + '</span>';
         }});
         $("div.albumSlider").albumSlider();
-    }}, 'POST');
+    }}}, 'POST');
     });
 });
 </script>
