--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -69,6 +69,7 @@
                 </ul>
               </li>
               <li><a href='http://www.onmath.com'>Contact</a></li>
+                <li><a href='{{ url_for('auth.logout') }}'>logout</a></li>
             </ul>
     </div>
   </div>
