--- a/app/templates/auth_base.html
+++ b/app/templates/auth_base.html
@@ -14,14 +14,14 @@
     <link href={{ url_for('static', filename='css/bootstrap.css') }} rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href={{ url_for('static', filename='css/auth_base.css') }} rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
     {% block css %}
     {% endblock %}
   </head>
 
   <body>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
+    <nav class="navbar navbar-default navbar-inverse navbar-fixed-top">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
@@ -38,7 +38,6 @@
               {% endblock %}
           </ul>
         </div><!--/.nav-collapse -->
-      </div>
     </nav>
 
     <div class="container">
