--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     <div id='menu'>
-      <nav class="navbar navbar-inverse">
+      <nav class="navbar navbar-default navbar-inverse">
         <div class="container-fluid">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
