--- a/app/templates/snp_index_cover.html
+++ b/app/templates/snp_index_cover.html
@@ -13,7 +13,8 @@
     <link href="{{ url_for('static', filename='css/bootstrap.css') }}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="{{ url_for('static', filename='css/carousel.css') }}" rel="stylesheet">
+      <link href="{{ url_for('static', filename='css/carousel.css') }}" rel="stylesheet">
+      <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
   </head>
 <!-- NAVBAR
 ================================================== -->
@@ -22,7 +23,7 @@
   <div class="navbar-wrapper">
       <div class="container">
 
-        <nav class="navbar navbar-inverse navbar-static-top">
+        <nav class="navbar navbar-default navbar-inverse navbar-static-top">
           <div class="container">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
