update template html pages

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 <form class="form-signin" action="">
-        <h2 class="form-signin-heading">sign in</h2>
+        <h2 style="text-align: center">sign in</h2>
         <label class="sr-only">UserName</label>
         <input id="username" class="form-control" placeholder="Username/Email" required>
         <label for="inputPassword" class="sr-only">Password</label>
