--- a/app/templates/snp_index_cover.html
+++ b/app/templates/snp_index_cover.html
@@ -40,6 +40,9 @@
                 <li><a href="{{ url_for('auth.login') }}">login</a></li>
                 <li><a href="{{ url_for('auth.register') }}">register</a></li>
               </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href='http://www.onmath.com'>Contact</a></li>
+                </ul>
             </div>
           </div>
         </nav>
