--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <div class="row">
-<h2>Registration</h2>
+<h2 style="text-align: center">Registration</h2>
 <form class="form-horizontal" method="post" action="">
 <fieldset>
 <div class="form-group">
