--- a/app/templates/auth_base.html
+++ b/app/templates/auth_base.html
@@ -32,11 +32,14 @@
           <a class="navbar-brand" href="#">snp index</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav">
                <li class="active"><a href="{{url_for('main.index')}}">Home</a></li>
               {% block auth %}
               {% endblock %}
-          </ul>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href='http://www.onmath.com'>Contact</a></li>
+            </ul>
         </div><!--/.nav-collapse -->
     </nav>
 
@@ -50,8 +53,8 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src={{ url_for('static', filename='js/jquery.min.js') }}></script>
+    <script src={{ url_for('static', filename='js/bootstrap.min.js') }}></script>
     {% block script %}
     {% endblock %}
   </body>
