change each module blueprint url

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -49,9 +49,9 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Genomic Variation<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
-                  <li><a href="{{ url_for('main.search_by_regin') }}">Search for Variations by Region</a></li>
+                  <li><a href="{{ url_for('variation.search_by_regin') }}">Search for Variations by Region</a></li>
                   <li class="divider"></li>
-                  <li><a href="{{ url_for('main.search_by_gene') }}">Search for Variations in Gene</a></li>
+                  <li><a href="{{ url_for('variation.search_by_gene') }}">Search for Variations in Gene</a></li>
                 </ul>
               </li>
               <li class="dropdown">
