--- a/app/templates/cover.html
+++ b/app/templates/cover.html
@@ -66,7 +66,7 @@
             <div class="carousel-caption">
               <h1>Gene Variation</h1>
               <p>Note: you can search Gene's snp by regin or name.</p>
-              <p><a class="btn btn-lg btn-primary" href="{{ url_for('main.search_by_regin') }}" role="button">Learn more</a></p>
+              <p><a class="btn btn-lg btn-primary" href="{{ url_for('variation.search_by_regin') }}" role="button">Learn more</a></p>
             </div>
           </div>
         </div>
@@ -114,7 +114,7 @@
           <img class="img-circle" src="{{ url_for('static', filename='images/v.jpg')}}" alt="Generic placeholder image" width="140" height="140">
           <h2>Variation</h2>
           <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-          <p><a class="btn btn-default" href="{{ url_for('main.search_by_regin') }}" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="{{ url_for('variation.search_by_regin') }}" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="img-circle" src="{{ url_for('static', filename='images/e.png')}}" alt="Generic placeholder image" width="140" height="140">
