--- a/app/templates/gene_variation/search_by_gene.html
+++ b/app/templates/gene_variation/search_by_gene.html
@@ -111,7 +111,7 @@ $(document).ready(function(){
   select_plugin()
   $("#select_file").change(function(){
     var fileSelect = $(this).find("option:selected").text();
-    ajaxSend('/select_file', {'file': fileSelect}, function(data){
+    ajaxSend('{{ url_for('variation.select_file_by_variation') }}', {'file': fileSelect}, function(data){
       var msg = data.msg;
       if(msg == 'error'){
           createAlert('not find samples!');
@@ -151,7 +151,7 @@ $(document).ready(function(){
       $("#query_hint").empty();
       var hint = $('<span><img src="../static/images/hint.gif" />' + '正在努力查询，请稍等...</span>');
       hint.appendTo('#query_hint');
-      ajaxSend('/get_snp_info',{'info': info}, function(data){
+      ajaxSend('{{ url_for('variation.get_snp_info') }}',{'info': info}, function(data){
         $('#query_hint').empty();
         if(data.msg != 'ok'){
           // alert(data.msg);
