--- a/app/templates/gene_variation/search_by_regin.html
+++ b/app/templates/gene_variation/search_by_regin.html
@@ -187,7 +187,7 @@ function check_input_data(info){
 $(document).ready(function(){
   $("#select_file").change(function(){
     var fileSelect = $(this).find("option:selected").text();
-    ajaxSend('/select_file', {'file': fileSelect}, function(data){
+    ajaxSend('{{ url_for('variation.select_file_by_variation') }}', {'file': fileSelect}, function(data){
       var msg = data.msg;
       if(msg == 'error'){
         // alert('not find samples!');
@@ -233,7 +233,7 @@ $(document).ready(function(){
     $("#query_hint").empty();
     var hint = $('<span><img src="../static/images/hint.gif" />' + '正在努力查询，请稍等...</span>');
     hint.appendTo('#query_hint');
-    ajaxSend('/get_snp_info',{'info': info}, function(data){
+    ajaxSend('{{ url_for('variation.get_snp_info') }}',{'info': info}, function(data){
       if(data.msg == 'error'){
         createAlert(data.msg);
         $("#query_hint").empty();
