--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,6 +27,8 @@
     <script type="text/javascript" src='/static/datatables/extensions/Buttons/js/buttons.print.min.js'></script>
     {% block css %}
     {% endblock %}
+    <link rel="apple-touch-icon-precomposed" href="{{url_for('static', filename='images/logo_icon.png') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='images/logo_icon.png')}}">
   </head>
   <body>
     <div id='menu'>
