--- a/app/templates/cover.html
+++ b/app/templates/cover.html
@@ -16,6 +16,8 @@
       <link href="{{ url_for('static', filename='css/carousel.css') }}" rel="stylesheet">
       <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
   </head>
+  <link rel="apple-touch-icon-precomposed" href="{{url_for('static', filename='images/logo_icon.png') }}">
+  <link rel="shortcut icon" href="{{ url_for('static', filename='images/logo_icon.png')}}">
 <!-- NAVBAR
 ================================================== -->
   <body>
