change loading msg

--- a/app/templates/expr/show_by_gene.html
+++ b/app/templates/expr/show_by_gene.html
@@ -120,7 +120,7 @@ $(document).ready(function(){
     if(check_gene(info)){
       info = JSON.stringify(info);
       $("#query_hint").empty();
-      var hint = $('<span><img src="../static/images/hint.gif" />' + '正在努力查询，请稍等...</span>');
+      var hint = $('<span><img src="../static/images/hint.gif" />' + 'loading data, please wait...</span>');
       hint.appendTo('#query_hint');
       ajaxSend('{{ url_for('expr.get_expr_info') }}',{'info': info}, function(data){
         if(data.msg != 'ok'){
