add blast tables on locus gene page

--- a/app/templates/tools/locus_gene_result.html
+++ b/app/templates/tools/locus_gene_result.html
@@ -60,6 +60,26 @@
                         {% endif %}
                         </tbody>
                     </table>
+                    <table width="100%" border="0">
+                        <tbody>
+                            <tr>
+                                <td class="header" colspan="2">Gene CDS Sequence</td>
+                            </tr>
+                            <tr>
+                                {{ locus_result['gene_cds_seq'] }}
+                            </tr>
+                        </tbody>
+                    </table>
+                    <table width="100%" border="0">
+                        <tbody>
+                            <tr>
+                                <td class="header" colspan="2">Gene Protein Sequence</td>
+                            </tr>
+                            <tr>
+                                {{ locus_result['gene_pro_seq'] }}
+                            </tr>
+                        </tbody>
+                    </table>
                 </td>
             </tr>
             </tbody>
