--- a/app/templates/tools/locus_gene_result.html
+++ b/app/templates/tools/locus_gene_result.html
@@ -66,7 +66,7 @@
                                 <td class="header" colspan="2">Gene CDS Sequence</td>
                             </tr>
                             <tr>
-                                {{ locus_result['gene_cds_seq'] }}
+				    <td class="centersmall">{{ locus_result['gene_cds_seq'] }}</td>
                             </tr>
                         </tbody>
                     </table>
@@ -76,7 +76,7 @@
                                 <td class="header" colspan="2">Gene Protein Sequence</td>
                             </tr>
                             <tr>
-                                {{ locus_result['gene_pro_seq'] }}
+				    <td class="centersmall">{{ locus_result['gene_pro_seq'] }}</td>
                             </tr>
                         </tbody>
                     </table>
