--- a/app/templates/tools/locus_gene_result.html
+++ b/app/templates/tools/locus_gene_result.html
@@ -65,9 +65,23 @@
                             <tr>
                                 <td class="header" colspan="2">Gene CDS Sequence</td>
                             </tr>
+			    {% if locus_result['gene_cds_seq'] == 'NA' %}
+			    <tr>
+				    <td class="centersmall">NA</td>
                             <tr>
-				    <td class="centersmall">{{ locus_result['gene_cds_seq'] }}</td>
-                            </tr>
+		            {%else%}
+			    {% for key,value in locus_result['gene_cds_seq'].items() %}
+			    	<tr>
+				    	<td class="leftsmall">{{ key }}</td>
+                            	</tr>
+				<tr>
+					<td class="leftsmall">{{ value }}</td>
+				</tr>
+				<tr>
+					<td><br/></td>
+				</tr>
+			    {% endfor %}
+			    {% endif %}
                         </tbody>
                     </table>
                     <table width="100%" border="0">
@@ -75,9 +89,23 @@
                             <tr>
                                 <td class="header" colspan="2">Gene Protein Sequence</td>
                             </tr>
+			    {% if locus_result['gene_cds_seq'] == 'NA' %}
                             <tr>
-				    <td class="centersmall">{{ locus_result['gene_pro_seq'] }}</td>
+				    <td class="centersmall">NA</td>
                             </tr>
+			    {% else %}
+			    {% for key,value in locus_result['gene_pro_seq'].items() %}
+			    	<tr>
+					<td class="leftsmall">{{ key }}</td>
+				</tr>
+				<tr>
+					<td class="leftsmall">{{ value }}</td>
+				</tr>
+				<tr>
+					<td><br/></td>
+				</tr>
+			    {% endfor %}
+			    {% endif %}
                         </tbody>
                     </table>
                 </td>
