--- a/app/static/css/locus_results.css
+++ b/app/static/css/locus_results.css
@@ -6,6 +6,7 @@
  vertical-align: middle;
  text-align: left;
  background-color:#F6F6F6;
+ word-spacing:0.1px;
 }
 .result-table td.header{
  font-family: Arial,helvetica,sans-serif;
