update css and html

--- a/app/templates/tools/locus_gene_result.html
+++ b/app/templates/tools/locus_gene_result.html
@@ -75,7 +75,7 @@
 				    	<td class="leftsmall">{{ key }}</td>
                             	</tr>
 				<tr>
-					<td class="leftsmall">{{ value }}</td>
+					<td class="leftsmall">{{ value | safe }}</td>
 				</tr>
 				<tr>
 					<td><br/></td>
@@ -99,7 +99,7 @@
 					<td class="leftsmall">{{ key }}</td>
 				</tr>
 				<tr>
-					<td class="leftsmall">{{ value }}</td>
+					<td class="leftsmall">{{ value | safe }}</td>
 				</tr>
 				<tr>
 					<td><br/></td>
