--- a/app/static/css/locus_results.css
+++ b/app/static/css/locus_results.css
@@ -1,6 +1,6 @@
 .result-table a {color:black;}
 .result-table td.leftsmall {
- font-family: Arial,Helvetica,sans-serif;
+ font-family: Courier,Helvetica,sans-serif;
  font-size: small;
  color: black;
  vertical-align: middle;
