--- a/app/templates/tools/locus_gene.html
+++ b/app/templates/tools/locus_gene.html
@@ -4,7 +4,7 @@
 <div class="panel">
   <h2>Locus Identidier Gene Search:</h2>
     <div class="panel-heading">
-        <h3 class="panel-title">Obtain a table of a coding regin by locus identifier(e.g.TraesCS1A01G000100)</h3>
+        <h3 class="panel-title">Obtain a table of a coding regin by locus identifier(e.g.TraesCS1D01G311400)</h3>
     </div>
     <div class="panel-body">
         <div class="form-group">
