--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,7 +12,7 @@
     <link href={{ url_for('static', filename='datatables/jquery.dataTables.min.css') }} rel="stylesheet">
     <link href={{ url_for('static', filename='css/jquery.dataTables.min.css') }} rel="stylesheet">
     <link href={{ url_for('static', filename='datatables/extensions/Buttons/css/buttons.dataTables.min.css') }} rel="stylesheet">
-    <link href={{ url_for('static', filename='css/bootstrap.css') }} rel="stylesheet">
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href={{ url_for('static', filename='css/bootstrap-select.css') }} rel="stylesheet">
     <link href={{ url_for('static', filename='css/main.css') }} rel="stylesheet">
     <script type="text/javascript" src='/static/js/jquery.min.js'></script>
