add variation and fix mail bug

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -54,6 +54,8 @@
                   <li><a href="{{ url_for('variation.search_by_regin') }}">Search for Variations by Region</a></li>
                   <li class="divider"></li>
                   <li><a href="{{ url_for('variation.search_by_gene') }}">Search for Variations in Gene</a></li>
+		  <li class="divider"></li>
+		  <li><a href="{{ url_for('variation.search_all') }}">Search All Variations</a></li>
                 </ul>
               </li>
               <li class="dropdown">
