--- a/app/templates/gene_variation/get_all_variations.html
+++ b/app/templates/gene_variation/get_all_variations.html
@@ -22,6 +22,8 @@
                         {% endfor %}
             </select>
         </div>
+        </div>
+            <div class="form-group">
             <div class="input-group input-group-sm">
                 <span class="input-group-addon">Compared tables:</span>
                 <select class="selectpicker" data-width="25%" name="table" id="select-table">
@@ -31,8 +33,8 @@
                         {% endfor %}
                 </select>
             </div>
+            </div>
       </div>
-    </div>
     <div class="col-xs-6">
         <div class="form-group">
         <div class="input-group input-group-sm">
