--- a/app/templates/gene_variation/get_all_variations.html
+++ b/app/templates/gene_variation/get_all_variations.html
@@ -133,6 +133,11 @@ function check_input_data(info){
     if(info[keys[i]].length == 0){
       msg = keys[i] + ' is empty!';
       return msg;
+    }else if(key[i] == 'groupA_name' || key[i] == 'groupB_name'){
+        var pattern = /\s+/g;
+        if(pattern.test(key[i])){
+            return 'custom group name not allowed includes space.';
+        }
     }
   }
   return msg;
